syntax = "proto3";

package greeting;

message Greeting {
	string sirst_name = 1;
	string last_name = 2;
}
message GreetingRequest {
	Greeting greeting = 1;
}
message GreetingResponse {
	string result = 1;
} 
service GreetingService {
	rpc TGreet (GreetingRequest) returns (GreetingResponse){}
	rpc Test (GreetingRequest) returns (GreetingResponse){}
}